syntax = "proto3";

package ping;

option go_package = "proto/ping";

service PingService {
  rpc Ping(Empty) returns (Pong) {}

  rpc PingStream(PingRequest) returns (stream Pong) {}
}

message Empty {}

message PingRequest {
  int32 count = 1;
}

message Pong {
  string text = 1;
}
